antlr/SchemaParser.ts
// Generated from antlr/Schema.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { SchemaListener } from "./SchemaListener";
import { SchemaVisitor } from "./SchemaVisitor";


export class SchemaParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly IDENTIFIER = 12;
	public static readonly WHITESPACE = 13;
	public static readonly RULE_start = 0;
	public static readonly RULE_typeDefinitions = 1;
	public static readonly RULE_typeDefinition = 2;
	public static readonly RULE_fieldList = 3;
	public static readonly RULE_field = 4;
	public static readonly RULE_fieldType = 5;
	public static readonly RULE_typeExpression = 6;
	public static readonly RULE_simpleType = 7;
	public static readonly RULE_arraySuffix = 8;
	public static readonly RULE_unionType = 9;
	public static readonly RULE_unionTypeInner = 10;
	public static readonly RULE_primitiveType = 11;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"start", "typeDefinitions", "typeDefinition", "fieldList", "field", "fieldType", 
		"typeExpression", "simpleType", "arraySuffix", "unionType", "unionTypeInner", 
		"primitiveType",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'type'", "'{'", "'}'", "':'", "'[]'", "'('", "')'", "'|'", 
		"'string'", "'number'", "'boolean'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, "IDENTIFIER", "WHITESPACE",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(SchemaParser._LITERAL_NAMES, SchemaParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return SchemaParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "Schema.g4"; }

	// @Override
	public get ruleNames(): string[] { return SchemaParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return SchemaParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(SchemaParser._ATN, this);
	}
	// @RuleVersion(0)
	public start(): StartContext {
		let _localctx: StartContext = new StartContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, SchemaParser.RULE_start);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 24;
			this.typeDefinitions();
			this.state = 25;
			this.match(SchemaParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public typeDefinitions(): TypeDefinitionsContext {
		let _localctx: TypeDefinitionsContext = new TypeDefinitionsContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, SchemaParser.RULE_typeDefinitions);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 27;
			this.typeDefinition();
			this.state = 35;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === SchemaParser.T__0 || _la === SchemaParser.WHITESPACE) {
				{
				this.state = 31;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === SchemaParser.WHITESPACE) {
					{
					{
					this.state = 28;
					this.match(SchemaParser.WHITESPACE);
					}
					}
					this.state = 33;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 34;
				this.typeDefinitions();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public typeDefinition(): TypeDefinitionContext {
		let _localctx: TypeDefinitionContext = new TypeDefinitionContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, SchemaParser.RULE_typeDefinition);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 37;
			this.match(SchemaParser.T__0);
			this.state = 38;
			this.match(SchemaParser.IDENTIFIER);
			this.state = 39;
			this.match(SchemaParser.T__1);
			this.state = 40;
			this.fieldList();
			this.state = 41;
			this.match(SchemaParser.T__2);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public fieldList(): FieldListContext {
		let _localctx: FieldListContext = new FieldListContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, SchemaParser.RULE_fieldList);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 43;
			this.field();
			this.state = 51;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === SchemaParser.IDENTIFIER || _la === SchemaParser.WHITESPACE) {
				{
				this.state = 47;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === SchemaParser.WHITESPACE) {
					{
					{
					this.state = 44;
					this.match(SchemaParser.WHITESPACE);
					}
					}
					this.state = 49;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 50;
				this.fieldList();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public field(): FieldContext {
		let _localctx: FieldContext = new FieldContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, SchemaParser.RULE_field);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 53;
			this.match(SchemaParser.IDENTIFIER);
			this.state = 57;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === SchemaParser.WHITESPACE) {
				{
				{
				this.state = 54;
				this.match(SchemaParser.WHITESPACE);
				}
				}
				this.state = 59;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 60;
			this.match(SchemaParser.T__3);
			this.state = 64;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === SchemaParser.WHITESPACE) {
				{
				{
				this.state = 61;
				this.match(SchemaParser.WHITESPACE);
				}
				}
				this.state = 66;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 67;
			this.fieldType();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public fieldType(): FieldTypeContext {
		let _localctx: FieldTypeContext = new FieldTypeContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, SchemaParser.RULE_fieldType);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 69;
			this.typeExpression();
			this.state = 73;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === SchemaParser.T__4) {
				{
				{
				this.state = 70;
				this.arraySuffix();
				}
				}
				this.state = 75;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public typeExpression(): TypeExpressionContext {
		let _localctx: TypeExpressionContext = new TypeExpressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, SchemaParser.RULE_typeExpression);
		try {
			this.state = 78;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 7, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 76;
				this.unionType();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 77;
				this.simpleType();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public simpleType(): SimpleTypeContext {
		let _localctx: SimpleTypeContext = new SimpleTypeContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, SchemaParser.RULE_simpleType);
		try {
			this.state = 82;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case SchemaParser.T__8:
			case SchemaParser.T__9:
			case SchemaParser.T__10:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 80;
				this.primitiveType();
				}
				break;
			case SchemaParser.IDENTIFIER:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 81;
				this.match(SchemaParser.IDENTIFIER);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public arraySuffix(): ArraySuffixContext {
		let _localctx: ArraySuffixContext = new ArraySuffixContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, SchemaParser.RULE_arraySuffix);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 84;
			this.match(SchemaParser.T__4);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public unionType(): UnionTypeContext {
		let _localctx: UnionTypeContext = new UnionTypeContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, SchemaParser.RULE_unionType);
		let _la: number;
		try {
			this.state = 103;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case SchemaParser.T__5:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 86;
				this.match(SchemaParser.T__5);
				this.state = 90;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === SchemaParser.WHITESPACE) {
					{
					{
					this.state = 87;
					this.match(SchemaParser.WHITESPACE);
					}
					}
					this.state = 92;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 93;
				this.unionTypeInner();
				this.state = 97;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === SchemaParser.WHITESPACE) {
					{
					{
					this.state = 94;
					this.match(SchemaParser.WHITESPACE);
					}
					}
					this.state = 99;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 100;
				this.match(SchemaParser.T__6);
				}
				break;
			case SchemaParser.T__8:
			case SchemaParser.T__9:
			case SchemaParser.T__10:
			case SchemaParser.IDENTIFIER:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 102;
				this.unionTypeInner();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public unionTypeInner(): UnionTypeInnerContext {
		let _localctx: UnionTypeInnerContext = new UnionTypeInnerContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, SchemaParser.RULE_unionTypeInner);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 105;
			this.simpleType();
			this.state = 122;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 14, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 109;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					while (_la === SchemaParser.WHITESPACE) {
						{
						{
						this.state = 106;
						this.match(SchemaParser.WHITESPACE);
						}
						}
						this.state = 111;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
					}
					this.state = 112;
					this.match(SchemaParser.T__7);
					this.state = 116;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					while (_la === SchemaParser.WHITESPACE) {
						{
						{
						this.state = 113;
						this.match(SchemaParser.WHITESPACE);
						}
						}
						this.state = 118;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
					}
					this.state = 119;
					this.simpleType();
					}
					}
				}
				this.state = 124;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 14, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public primitiveType(): PrimitiveTypeContext {
		let _localctx: PrimitiveTypeContext = new PrimitiveTypeContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, SchemaParser.RULE_primitiveType);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 125;
			_la = this._input.LA(1);
			if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << SchemaParser.T__8) | (1 << SchemaParser.T__9) | (1 << SchemaParser.T__10))) !== 0))) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!SchemaParser.__ATN) {
			SchemaParser.__ATN = new ATNDeserializer().deserialize(Utils.toCharArray(SchemaParser._serializedATN));
		}

		return SchemaParser.__ATN;
	}

}

export class StartContext extends ParserRuleContext {
	public typeDefinitions(): TypeDefinitionsContext {
		return this.getRuleContext(0, TypeDefinitionsContext);
	}
	public EOF(): TerminalNode { return this.getToken(SchemaParser.EOF, 0); }
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return SchemaParser.RULE_start; }
	// @Override
	public enterRule(listener: SchemaListener): void {
		if (listener.enterStart) {
			listener.enterStart(this);
		}
	}
	// @Override
	public exitRule(listener: SchemaListener): void {
		if (listener.exitStart) {
			listener.exitStart(this);
		}
	}
	// @Override
	public accept<Result>(visitor: SchemaVisitor<Result>): Result {
		if (visitor.visitStart) {
			return visitor.visitStart(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class TypeDefinitionsContext extends ParserRuleContext {
	public typeDefinition(): TypeDefinitionContext {
		return this.getRuleContext(0, TypeDefinitionContext);
	}
	public typeDefinitions(): TypeDefinitionsContext | undefined {
		return this.tryGetRuleContext(0, TypeDefinitionsContext);
	}
	public WHITESPACE(): TerminalNode[];
	public WHITESPACE(i: number): TerminalNode;
	public WHITESPACE(i?: number): TerminalNode | TerminalNode[] {
		if (i === undefined) {
			return this.getTokens(SchemaParser.WHITESPACE);
		} else {
			return this.getToken(SchemaParser.WHITESPACE, i);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return SchemaParser.RULE_typeDefinitions; }
	// @Override
	public enterRule(listener: SchemaListener): void {
		if (listener.enterTypeDefinitions) {
			listener.enterTypeDefinitions(this);
		}
	}
	// @Override
	public exitRule(listener: SchemaListener): void {
		if (listener.exitTypeDefinitions) {
			listener.exitTypeDefinitions(this);
		}
	}
	// @Override
	public accept<Result>(visitor: SchemaVisitor<Result>): Result {
		if (visitor.visitTypeDefinitions) {
			return visitor.visitTypeDefinitions(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class TypeDefinitionContext extends ParserRuleContext {
	public IDENTIFIER(): TerminalNode { return this.getToken(SchemaParser.IDENTIFIER, 0); }
	public fieldList(): FieldListContext {
		return this.getRuleContext(0, FieldListContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return SchemaParser.RULE_typeDefinition; }
	// @Override
	public enterRule(listener: SchemaListener): void {
		if (listener.enterTypeDefinition) {
			listener.enterTypeDefinition(this);
		}
	}
	// @Override
	public exitRule(listener: SchemaListener): void {
		if (listener.exitTypeDefinition) {
			listener.exitTypeDefinition(this);
		}
	}
	// @Override
	public accept<Result>(visitor: SchemaVisitor<Result>): Result {
		if (visitor.visitTypeDefinition) {
			return visitor.visitTypeDefinition(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class FieldListContext extends ParserRuleContext {
	public field(): FieldContext {
		return this.getRuleContext(0, FieldContext);
	}
	public fieldList(): FieldListContext | undefined {
		return this.tryGetRuleContext(0, FieldListContext);
	}
	public WHITESPACE(): TerminalNode[];
	public WHITESPACE(i: number): TerminalNode;
	public WHITESPACE(i?: number): TerminalNode | TerminalNode[] {
		if (i === undefined) {
			return this.getTokens(SchemaParser.WHITESPACE);
		} else {
			return this.getToken(SchemaParser.WHITESPACE, i);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return SchemaParser.RULE_fieldList; }
	// @Override
	public enterRule(listener: SchemaListener): void {
		if (listener.enterFieldList) {
			listener.enterFieldList(this);
		}
	}
	// @Override
	public exitRule(listener: SchemaListener): void {
		if (listener.exitFieldList) {
			listener.exitFieldList(this);
		}
	}
	// @Override
	public accept<Result>(visitor: SchemaVisitor<Result>): Result {
		if (visitor.visitFieldList) {
			return visitor.visitFieldList(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class FieldContext extends ParserRuleContext {
	public IDENTIFIER(): TerminalNode { return this.getToken(SchemaParser.IDENTIFIER, 0); }
	public fieldType(): FieldTypeContext {
		return this.getRuleContext(0, FieldTypeContext);
	}
	public WHITESPACE(): TerminalNode[];
	public WHITESPACE(i: number): TerminalNode;
	public WHITESPACE(i?: number): TerminalNode | TerminalNode[] {
		if (i === undefined) {
			return this.getTokens(SchemaParser.WHITESPACE);
		} else {
			return this.getToken(SchemaParser.WHITESPACE, i);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return SchemaParser.RULE_field; }
	// @Override
	public enterRule(listener: SchemaListener): void {
		if (listener.enterField) {
			listener.enterField(this);
		}
	}
	// @Override
	public exitRule(listener: SchemaListener): void {
		if (listener.exitField) {
			listener.exitField(this);
		}
	}
	// @Override
	public accept<Result>(visitor: SchemaVisitor<Result>): Result {
		if (visitor.visitField) {
			return visitor.visitField(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class FieldTypeContext extends ParserRuleContext {
	public typeExpression(): TypeExpressionContext {
		return this.getRuleContext(0, TypeExpressionContext);
	}
	public arraySuffix(): ArraySuffixContext[];
	public arraySuffix(i: number): ArraySuffixContext;
	public arraySuffix(i?: number): ArraySuffixContext | ArraySuffixContext[] {
		if (i === undefined) {
			return this.getRuleContexts(ArraySuffixContext);
		} else {
			return this.getRuleContext(i, ArraySuffixContext);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return SchemaParser.RULE_fieldType; }
	// @Override
	public enterRule(listener: SchemaListener): void {
		if (listener.enterFieldType) {
			listener.enterFieldType(this);
		}
	}
	// @Override
	public exitRule(listener: SchemaListener): void {
		if (listener.exitFieldType) {
			listener.exitFieldType(this);
		}
	}
	// @Override
	public accept<Result>(visitor: SchemaVisitor<Result>): Result {
		if (visitor.visitFieldType) {
			return visitor.visitFieldType(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class TypeExpressionContext extends ParserRuleContext {
	public unionType(): UnionTypeContext | undefined {
		return this.tryGetRuleContext(0, UnionTypeContext);
	}
	public simpleType(): SimpleTypeContext | undefined {
		return this.tryGetRuleContext(0, SimpleTypeContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return SchemaParser.RULE_typeExpression; }
	// @Override
	public enterRule(listener: SchemaListener): void {
		if (listener.enterTypeExpression) {
			listener.enterTypeExpression(this);
		}
	}
	// @Override
	public exitRule(listener: SchemaListener): void {
		if (listener.exitTypeExpression) {
			listener.exitTypeExpression(this);
		}
	}
	// @Override
	public accept<Result>(visitor: SchemaVisitor<Result>): Result {
		if (visitor.visitTypeExpression) {
			return visitor.visitTypeExpression(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class SimpleTypeContext extends ParserRuleContext {
	public primitiveType(): PrimitiveTypeContext | undefined {
		return this.tryGetRuleContext(0, PrimitiveTypeContext);
	}
	public IDENTIFIER(): TerminalNode | undefined { return this.tryGetToken(SchemaParser.IDENTIFIER, 0); }
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return SchemaParser.RULE_simpleType; }
	// @Override
	public enterRule(listener: SchemaListener): void {
		if (listener.enterSimpleType) {
			listener.enterSimpleType(this);
		}
	}
	// @Override
	public exitRule(listener: SchemaListener): void {
		if (listener.exitSimpleType) {
			listener.exitSimpleType(this);
		}
	}
	// @Override
	public accept<Result>(visitor: SchemaVisitor<Result>): Result {
		if (visitor.visitSimpleType) {
			return visitor.visitSimpleType(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class ArraySuffixContext extends ParserRuleContext {
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return SchemaParser.RULE_arraySuffix; }
	// @Override
	public enterRule(listener: SchemaListener): void {
		if (listener.enterArraySuffix) {
			listener.enterArraySuffix(this);
		}
	}
	// @Override
	public exitRule(listener: SchemaListener): void {
		if (listener.exitArraySuffix) {
			listener.exitArraySuffix(this);
		}
	}
	// @Override
	public accept<Result>(visitor: SchemaVisitor<Result>): Result {
		if (visitor.visitArraySuffix) {
			return visitor.visitArraySuffix(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class UnionTypeContext extends ParserRuleContext {
	public unionTypeInner(): UnionTypeInnerContext {
		return this.getRuleContext(0, UnionTypeInnerContext);
	}
	public WHITESPACE(): TerminalNode[];
	public WHITESPACE(i: number): TerminalNode;
	public WHITESPACE(i?: number): TerminalNode | TerminalNode[] {
		if (i === undefined) {
			return this.getTokens(SchemaParser.WHITESPACE);
		} else {
			return this.getToken(SchemaParser.WHITESPACE, i);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return SchemaParser.RULE_unionType; }
	// @Override
	public enterRule(listener: SchemaListener): void {
		if (listener.enterUnionType) {
			listener.enterUnionType(this);
		}
	}
	// @Override
	public exitRule(listener: SchemaListener): void {
		if (listener.exitUnionType) {
			listener.exitUnionType(this);
		}
	}
	// @Override
	public accept<Result>(visitor: SchemaVisitor<Result>): Result {
		if (visitor.visitUnionType) {
			return visitor.visitUnionType(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class UnionTypeInnerContext extends ParserRuleContext {
	public simpleType(): SimpleTypeContext[];
	public simpleType(i: number): SimpleTypeContext;
	public simpleType(i?: number): SimpleTypeContext | SimpleTypeContext[] {
		if (i === undefined) {
			return this.getRuleContexts(SimpleTypeContext);
		} else {
			return this.getRuleContext(i, SimpleTypeContext);
		}
	}
	public WHITESPACE(): TerminalNode[];
	public WHITESPACE(i: number): TerminalNode;
	public WHITESPACE(i?: number): TerminalNode | TerminalNode[] {
		if (i === undefined) {
			return this.getTokens(SchemaParser.WHITESPACE);
		} else {
			return this.getToken(SchemaParser.WHITESPACE, i);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return SchemaParser.RULE_unionTypeInner; }
	// @Override
	public enterRule(listener: SchemaListener): void {
		if (listener.enterUnionTypeInner) {
			listener.enterUnionTypeInner(this);
		}
	}
	// @Override
	public exitRule(listener: SchemaListener): void {
		if (listener.exitUnionTypeInner) {
			listener.exitUnionTypeInner(this);
		}
	}
	// @Override
	public accept<Result>(visitor: SchemaVisitor<Result>): Result {
		if (visitor.visitUnionTypeInner) {
			return visitor.visitUnionTypeInner(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class PrimitiveTypeContext extends ParserRuleContext {
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return SchemaParser.RULE_primitiveType; }
	// @Override
	public enterRule(listener: SchemaListener): void {
		if (listener.enterPrimitiveType) {
			listener.enterPrimitiveType(this);
		}
	}
	// @Override
	public exitRule(listener: SchemaListener): void {
		if (listener.exitPrimitiveType) {
			listener.exitPrimitiveType(this);
		}
	}
	// @Override
	public accept<Result>(visitor: SchemaVisitor<Result>): Result {
		if (visitor.visitPrimitiveType) {
			return visitor.visitPrimitiveType(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


